--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,7 @@
     <string name="action_cat_male">Кот</string>
     <string name="action_cat_female">Кошка</string>
     <string name="action_kitten">Котёнок</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_item_view">ItemViewActivity</string>
 </resources>
